# mojo-from-scratch

./: .gitignore  Makefile  README.md  pyproject.toml
part1/ch01/: hello_mojo_minimal.mojo  numpy_mean.mojo  ownership_conventions.mojo  point_distance.mojo
part1/ch03/: numpy_sum.mojo
part1/ch04/: python_comparison_calculate_average_raises.mojo  python_comparison_calculate_average_simple.mojo
part2/ch05/: functions_overload_params.mojo  language_basics_minimal.mojo  raises_try_except.mojo  variables_block_var.mojo  variables_implicit_scope.mojo  variables_ownership_transfer.mojo
part2/ch06/: control_flow_for_ref_inplace.mojo  control_flow_loop_else.mojo  errors_try_except_reraise.mojo  operators_xor_and_move.mojo  types_builtin_kinds.mojo  types_cast_and_list.mojo  types_explicit_cast.mojo  types_literals.mojo  types_simd_basics.mojo  types_struct_nominal.mojo
part2/ch07/: counter_init.mojo  reference_arc_pointer_config.mojo  reference_heap_int_cell.mojo  reference_heapints_managed.mojo  reference_ref_list_double.mojo  structs_copyable_label.mojo  structs_implicit_miles.mojo  structs_what_counter.mojo
part2/ch08/: death_heap_buffer.mojo  fieldwise_init_intrange.mojo  init_box_bounds.mojo  life_copyable_label.mojo  life_movable_buffer.mojo  lifecycle_resource_traces.mojo  lifetimes_dangling_ref.mojo  lifetimes_read_param.mojo  lifetimes_ref_from_arg.mojo  lifetimes_unsafe_pointer_heap.mojo  move_transfer.mojo  ownership_read_ref_and_move.mojo  ref_return_origin.mojo  value_semantics_counter.mojo  (+1 more)
part3/: microgpt.py  microgpt_mlx.py  microgpt_torch.py
(+62 files in other folders)
